--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blueprintjs/core": "^4.13.0",
+    "@blueprintjs/popover2": "^1.10.2",
+    "@moralisweb3/next": "^2.10.4",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "ethers": "^5.7.2",
+    "moralis": "^2.10.4",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "wagmi": "^0.10.2"
   }
 }
