--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "typescript": "4.9.4",
     "wagmi": "^0.10.2"
   }
