--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "eslint-config-next": "13.1.1",
     "ethers": "^5.7.2",
     "moralis": "^2.10.4",
+    "net": "^1.0.2",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
+    "redis": "^4.5.1",
+    "redis-om": "^0.3.6",
+    "tls": "^0.0.1",
     "typescript": "4.9.4",
+    "url": "^0.11.0",
     "wagmi": "^0.10.2"
   }
 }
