--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
     "redis": "^4.5.1",
     "redis-om": "^0.3.6",
     "tls": "^0.0.1",
     "typescript": "4.9.4",
-    "url": "^0.11.0",
     "wagmi": "^0.10.2"
   }
 }
